--- a/activities.html
+++ b/activities.html
@@ -16,7 +16,7 @@
             type="checkbox"
             name="activities"
             value="aquarium"
-          />aquarium</label
+          />aquario</label
         >
       </div>
       <div class="activity-item">
@@ -46,7 +46,7 @@
             type="checkbox"
             name="activities"
             value="ceramics"
-          />ceramics</label
+          />ceramica</label
         >
       </div>
       <div class="activity-item">
@@ -56,7 +56,7 @@
             type="checkbox"
             name="activities"
             value="kunsthalle"
-          />exhibition</label
+          />museo</label
         >
       </div>
       <div class="activity-item">
