--- a/food.html
+++ b/food.html
@@ -18,7 +18,7 @@
           ><input
             type="checkbox"
             name="food"
-            value="Burgers, fries and fried chicken"
+            value="Borguesa and fried chicken"
           />
           burgers and fried chicken</label
         >
@@ -32,7 +32,7 @@
       <div class="food-item">
         <img src="food/koreanfood.jpeg" alt="koreanfood" />
         <label
-          ><input type="checkbox" name="food" value="Korean food" /> korean
+          ><input type="checkbox" name="food" value="coreanos" /> korean
           food</label
         >
       </div>
@@ -58,7 +58,7 @@
       </div>
     </div>
     <button class="button" onclick="location.href='dessert.html'">
-      Continue UWU
+      Continue
     </button>
   </body>
 </html>
